logs/mobility/build.make.044.log.stderr
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp: In function ‘int main(int, char**)’:
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:180:5: error: ‘SF’ has not been declared
     SF::RenderWindow window;
     ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:180:22: error: expected ‘;’ before ‘window’
     SF::RenderWindow window;
                      ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:181:5: error: ‘window’ was not declared in this scope
     window.create(SF::VideoMode(900,1800),"TEST WINDOW");
     ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:181:19: error: ‘SF’ has not been declared
     window.create(SF::VideoMode(900,1800),"TEST WINDOW");
                   ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
